# frameblaze

./: .gitignore  .nojekyll  Cargo.toml  Cross.toml  README.md  from.html  getting-started.html  index.html  roadmap.html  robots.txt  search.json  sitemap.xml  styles.css  to.html  transformers.html
.github/workflows/: ci.yml  publish-docs.yml  release.yml
docs/: _quarto.yml  from.qmd  getting-started.qmd  index.qmd  roadmap.qmd  styles.css  to.qmd  transformers.qmd
src/: cli.rs  config.rs  format.rs  lib.rs  main.rs  storage.rs
src/from/: avro.rs  csv.rs  ipc.rs  json.rs  mod.rs  parquet.rs
src/test_utils/: mod.rs
src/to/: avro.rs  csv.rs  ipc.rs  json.rs  mod.rs  parquet.rs
src/transform/: column_filter.rs  mod.rs  row_filter.rs
tests/: integration_test.rs
