[package]
name = "frameblaze"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A CLI tool for transforming tabular data (Parquet <-> CSV) with column filters."
repository = "https://github.com/yourusername/frameblaze"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
polars = { version = "0.46.0", features = ["lazy", "parquet", "csv", "ipc", "json"] }
polars-io = { version = "0.46.0",features = ["avro"] }
anyhow = "1.0"
toml = "0.7"
thiserror = "1.0"
csv = "1.3.1"
psm = "0.1.24"

[dev-dependencies]
# For integration tests that run the compiled binary
assert_cmd = "2.0"
tempfile = "3.3"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"